traefik/service-traefik-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: traefik
  name: traefik-dashboard
  namespace: traefik
spec:
  ports:
  - name: traefik
    port: 8080
    protocol: TCP
    targetPort: traefik
  selector:
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: ClusterIP
