traefik/ingress-traefik-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  ingressClassName: nginx
  tls:
   - hosts:
     - traefik.infra.${dns_domain}
     secretName: letsencrypt-wildcard-cert  
  rules:
  - host: traefik.infra.${dns_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              name: traefik
